# EKFPres

./: .gitignore  README.md
KCFcpp/: CMakeLists.txt
KCFcpp/src/: runtracker.cpp
Meanshift/: Feature_caculation.py  GetRoi.py  Meanshift.py  main.py
bayesianTracking/: test.cpp
data/dataset121/: 1.ini  image-train.txt  images.txt  out-rect.txt  output.txt
data/datay/: images.txt  out-rect.txt  output.txt
doc/: ekf-presentation.tex  ref.bib
doc/image/: state.pptx
kalman-tracker/: CMakeLists.txt
kalman-tracker/source/: opencv-kalman.cpp  opencv-kalman.cpp~  track-1of3.cpp  track-yellow.cpp
particlefilter/: CMakeLists.txt
particlefilter/test/: main.cpp
src/: ekf-presentation.tex
